first commit by git

--- a/counting words with loop for.ipynb
+++ b/counting words with loop for.ipynb
@@ -18,30 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "1da7ee99-ebca-4e63-ab33-d37bec9733f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'I said what I said because I meant what I said when I said what I said. He kept running and running and running until running was all he knew. The more you think about what you think, the more you think you thought the right thing.'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text=\"I said what I said because I meant what I said when I said what I said. He kept running and running and running until running was all he knew. The more you think about what you think, the more you think you thought the right thing.\"\n",
-    "\n",
-    "text"
+    "text=\"I said what I said because I meant what I said when I said what I said. He kept running and running and running until running was all he knew. The more you think about what you think, the more you think you thought the right thing.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "973de0de-8104-4aab-835c-5ea2c1f83cc5",
    "metadata": {},
    "outputs": [],
@@ -51,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "813e6c74-af3d-4cbb-bf19-99de8f8b0212",
    "metadata": {},
    "outputs": [],
@@ -63,16 +50,15 @@
     "    each unique word in\n",
     "    given piece of text (txt)\n",
     "    \"\"\"\n",
-    "    txt=txt.lower() \n",
-    "    txt=re.sub(r'[,\"!./]','',txt)   #firstly we will standaraize text\n",
-    "    txt=txt.split()          #we split sentences into words\n",
-    "    txt=list(txt)            #we create list which we will use in loop\n",
-    "    words=[]                 #in this list we will store our unique words\n",
-    "    for a in txt:\n",
-    "        if not a in words:   #sprawdzamy czy nasz wyraz jest już policzony\n",
-    "            words.append(a)  #we add this word to words to do not repeat words in final result\n",
-    "            result=print(f\"{a} appears in given text\", txt.count(a),\"times\")\n",
-    "    return(result)"
+    "    txt=txt.lower()                 # Convert text to lowercase so that 'Word' and 'word' are treated the same\n",
+    "    txt=re.sub(r'[,\"!./]','',txt)   # Remove punctuation marks to clean the input\n",
+    "    txt=txt.split()                 # split the text into individual words\n",
+    "    words=[]                 # in this list we will store our unique words\n",
+    "    for word in txt:\n",
+    "        if not word in words:   # check if word was already counted\n",
+    "            words.append(word)  # add this word to list so it will not be repeated\n",
+    "            result=print(f\"{word} appears in given text\", txt.count(word),\"times\")\n",
+    "    return result"
    ]
   },
   {
@@ -85,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "6f53bcda-4ab9-4fe7-bbb6-8e3ac4eb3473",
    "metadata": {},
    "outputs": [
@@ -123,9 +109,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9c744f5-0c03-4f6f-87ed-3b69d980c8e8",
+   "metadata": {},
+   "source": [
+    "**There is a lot of noise from word which appear more than one time. It is good idea to remove them**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0c6f3d23-b9b0-41fa-9c6a-b39d1436b358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_words_excl1 (txt):\n",
+    "    \"\"\"\n",
+    "    this function counts only the \n",
+    "    words that appear more than \n",
+    "    once in the given text (txt)\n",
+    "    \"\"\"\n",
+    "    txt=txt.lower()                 # Convert text to lowercase so that 'Word' and 'word' are treated the same\n",
+    "    txt=re.sub(r'[,\"!./]','',txt)   # Remove punctuation marks to clean the input\n",
+    "    txt=txt.split()                 # split the text into individual words\n",
+    "    checked_words=[]                # List to track already processed words\n",
+    "    for word in txt:\n",
+    "         if not word in checked_words: # Skip words that have already been processed\n",
+    "             count=txt.count(word)\n",
+    "             if count > 1:             #Only include words that appear more than once\n",
+    "                print(f\"{word} appears in given text {count}times\")\n",
+    "                checked_words.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fa965137-8e41-4a20-9c99-cbdbc6253dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i appears in given text 6times\n",
+      "said appears in given text 5times\n",
+      "what appears in given text 4times\n",
+      "he appears in given text 2times\n",
+      "running appears in given text 4times\n",
+      "and appears in given text 2times\n",
+      "the appears in given text 3times\n",
+      "more appears in given text 2times\n",
+      "you appears in given text 4times\n",
+      "think appears in given text 3times\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_words_excl1(text)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92886b2c-99c9-45ee-bf16-6143da0e324c",
+   "id": "902fa3e8-6581-47cd-a383-a33e886ef4b4",
    "metadata": {},
    "outputs": [],
    "source": []
