--- a/counting words with loop for.ipynb
+++ b/counting words with loop for.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1da7ee99-ebca-4e63-ab33-d37bec9733f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text=\"I said what I said because I meant what I said when I said what I said. He kept running and running and running until running was all he knew. The more you think about what you think, the more you think you thought the right thing.\""
+    "text=\"I said what I said because I meant what I said when I said what I said. He kept running and running and running until running was all he knew. The more you think! about what you think, the more you think you thought the right thing.\""
    ]
   },
   {
